# teatro

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  app.js  config.example.json  package-lock.json  package.json
.cargo/: config
src/: id.rs  main.rs
