[package]
name = "teatro"
version = "0.1.0"
authors = ["Jens Reidel <jens@troet.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = { version = "3", default-features = false, features = ["rustls"] }
bb8-redis = { git = "https://github.com/djc/bb8", branch = "main" }
bb8-postgres = { git = "https://github.com/djc/bb8", branch = "main" }
env_logger = "0.8"
rand = "0.7"
serde = "1"
serde_json = "1"

[profile.release]
lto = true
