[package]
name = "teatro"
version = "0.1.0"
authors = ["Jens Reidel <jens@troet.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bb8-redis = "0.8"
bb8-postgres = "0.7"
env_logger = { version = "0.8", default-features = false, features = ["termcolor", "atty", "humantime"] }
hyper = { version = "0.14", features = ["client", "server", "http2", "tcp"] }
hyper-rustls = "0.22"
lazy_static = "1.4"
log = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.2", default-features = false, features = ["macros", "rt-multi-thread"] }

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
panic = "abort"
