[package]
name = "teatro"
version = "0.1.0"
authors = ["Jens Reidel <jens@troet.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bb8-redis = "0.11"
bb8-postgres = "0.8"
env_logger = { version = "0.9", default-features = false, features = ["atty", "humantime"] }
hyper = { version = "0.14", features = ["client", "server", "http1", "tcp"] }
lazy_static = "1.4"
libc = { version = "0.2", default-features = false }
log = "0.4"
parking_lot = { version = "0.12", features = ["hardware-lock-elision", "nightly"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
simd-json = "0.4"
tokio = { version = "1", default-features = false, features = ["macros", "parking_lot", "rt-multi-thread"] }

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
panic = "abort"
